Fix issues with scrollbar interactivity and adding spells to favourites on character sheet.

--- a/less/v2/character.less
+++ b/less/v2/character.less
@@ -9,7 +9,6 @@
   background: transparent;
   min-width: 800px;
   min-height: 700px;
-  transform-style: preserve-3d;
   box-shadow: none;
 
   &::after {
